# om

./: .clang-format  .clang-tidy  .clangd  .cmake-format.py  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  appveyor.yml  bitbucket-pipelines.yml  mise.linux.toml  mise.toml  om-build.sh  readme.md  vcpkg-configuration.json  vcpkg.json
00-basic-prog/: CMakeLists.txt  readme.md
00-basic-prog/01-hello-world/: CMakeLists.txt  Main.java  cout_main.cxx  cout_main_colored.cxx  hack_asm_main.cxx  hack_main.cxx  main.go  main.py  main.rs  main_print_std23.cxx  main_std23.cxx  readme.md  syscall.s  syscall_x86_64.s  win32_main.cxx
00-basic-prog/01-hello-world-modern/: CMakeLists.txt  hello.cxx
00-basic-prog/02-destr-except/: CMakeLists.txt  main.cxx
00-basic-prog/03-bool-type/: CMakeLists.txt  bool.cxx  main.cxx  readme.md
00-basic-prog/03-int-type/: CMakeLists.txt  bool.cxx  main.cxx  readme.md
00-basic-prog/04-new-delete-overload/: CMakeLists.txt  main.cxx
00-basic-prog/05-signal-handler/: CMakeLists.txt  main.cpp  throw_from_sig_handler.cpp
00-basic-prog/06-create-process/: CMakeLists.txt  hello.cxx  main.cxx
00-basic-prog/07-multi-threading/: main.cxx
00-basic-prog/08-aslr/: CMakeLists.txt  check_aslr_repeat.cxx  exec-stream.cpp  exec-stream.h  main.cxx
00-basic-prog/09-concepts/: CMakeLists.txt  main.cxx
00-basic-prog/10-debug-macro/: CMakeLists.txt  main.cxx
00-basic-prog/11-shared-lock/: CMakeLists.txt  main.cxx
00-basic-prog/12-modules/: CMakeLists.txt  hello.cxx  main.cxx  readme.md
00-basic-prog/13-stack-info/: CMakeLists.txt  main.cxx  stack_info.cxx
00-basic-prog/14-cxx17-fs/: CMakeLists.txt  main.cxx
00-basic-prog/15-new-delete-speed/: CMakeLists.txt  main.cxx
00-basic-prog/16-cxx-ide-requirements/: readme.md
00-basic-prog/17-heap-info/: CMakeLists.txt  main.cxx
00-basic-prog/18-stacktrace/: CMakeLists.txt  main_boost_stacktrace.cxx  main_std_stacktrace.cxx
00-basic-prog/19-boost-file-system/: CMakeLists.txt  main.cxx
00-basic-prog/20-asan-tutorial/: CMakeLists.txt  main.cxx
00-basic-prog/21-split-str-no-alloc/: CMakeLists.txt  main.cxx
00-basic-prog/22-no-alloc-memory/: CMakeLists.txt  main.cxx
00-basic-prog/23-float-format/: CMakeLists.txt  main.cxx
00-basic-prog/24-error-code/: CMakeLists.txt  main.cxx
00-basic-prog/25-range-proj/: CMakeLists.txt  main.cxx
00-basic-prog/26-security-error/: CMakeLists.txt  main.cxx
00-basic-prog/27-copy-file-cxx/: CMakeLists.txt  main.cxx
00-basic-prog/28-addressable-func/: CMakeLists.txt  main.cxx
00-basic-prog/28-addresseble-func/: CMakeLists.txt  main.cxx
00-basic-prog/29-localization/: CMakeLists.txt  main.cxx  readme.org
00-basic-prog/30-crypto-aes/: CMakeLists.txt  main.cxx  readme.md
00-basic-prog/31-python/: .gitignore  readme.md  setup.py
00-basic-prog/32-utf8-cpp/: CMakeLists.txt  main.cxx
00-basic-prog/33-new-alg/: CMakeLists.txt  main.cxx
00-basic-prog/34-doctest/: CMakeLists.txt  doctest.h  main.cxx  main_moc.cxx
00-basic-prog/35-catch2/: CMakeLists.txt  catch_amalgamated.cpp  catch_amalgamated.hpp  fakeit.hpp  main.cxx  main_moc.cxx
00-basic-prog/36-gtest/: CMakeLists.txt  main.cxx  main_moc.cxx
00-basic-prog/37-llvm-set-operator-less/: CMakeLists.txt  main.cxx
00-basic-prog/38-import-cxx/: CMakeLists.txt  main.cxx  vulkan.cppm
00-basic-prog/39-sdl-process-assert/: CMakeLists.txt  main.cxx  show_message.cxx  show_message.hxx
00-basic-prog/40-emoji-in-term/: CMakeLists.txt  main.cxx
00-basic-prog/41-redis-log-client/: CMakeLists.txt  log_client_config.txt  main.cxx  readme.md  redis.conf  redis_config.txt
00-basic-prog/42-async-loading/: CMakeLists.txt  async-loading-presentation.pptx  async-loading.md  boost_main.cpp  main.cxx  make_async_loading_presentation.py  make_threading_paradigm_poster.py  threading-paradigm-poster.pptx
01-basic-game-dev/: CMakeLists.txt  readme.md
01-basic-game-dev/01-1-hello-world/: CMakeLists.txt  readme.md
01-basic-game-dev/01-2-hello-lib/: CMakeLists.txt
01-basic-game-dev/02-1-sdl-dynamic/: CMakeLists.txt  main.cxx
01-basic-game-dev/02-2-sdl-static/: CMakeLists.txt  main.cxx
01-basic-game-dev/03-0-sdl-input-terminal/: CMakeLists.txt  main.cxx
01-basic-game-dev/03-1-sdl-loop/: CMakeLists.txt  main.cxx
01-basic-game-dev/03-2-sdl-loop-to-engine/: CMakeLists.txt  engine.cxx  engine.hxx
01-basic-game-dev/03-3-sdl-loop-to-engine-dll/: CMakeLists.txt  engine.cxx  engine.hxx
01-basic-game-dev/03-4-sdl-loop-hot-reload/: CMakeLists.txt  engine.cxx  engine.hxx  game.cxx
01-basic-game-dev/04-0-render-basic/: 00_canvas_basic.cxx  00_canvas_basic.hxx  00_canvas_basic_main.cxx  01_line_render.cxx  01_line_render_main.cxx  02_triangle_render.cxx  02_triangle_render.hxx  02_triangle_render_main.cxx  03_triangle_indexed_render.cxx  03_triangle_indexed_render.hxx  03_triangle_indexed_render_main.cxx  04-0-image-windowed.cxx  04-0-render-full-windowed.cxx  04_triangle_interpolated_render.cxx  04_triangle_interpolated_render_main.cxx  05-0-render-basic-windowed.cxx  06_ray_tracing_basic.cxx  07_ray_tracing_basic.cxx  08_ray_tracing_basic.cxx  09_ray_tracing_basic.cxx  10_ray_tracing_basic.cxx  11_ray_tracing_basic.cxx  12_rasterize_cube.cxx  CMakeLists.txt
01-basic-game-dev/04-1-opengl-minimal/: CMakeLists.txt  engine.cxx  game.cxx  vertexes.txt
01-basic-game-dev/04-2-opengl-triangle/: CMakeLists.txt  engine.cxx  engine.hxx  game.cxx  vertexes.txt
01-basic-game-dev/04-3-opengl-renderdoc-check/: CMakeLists.txt  engine.cxx  engine.hxx  game.cxx  vertexes.txt
01-basic-game-dev/05-1-vertex-morphing/: CMakeLists.txt  engine.cxx  game.cxx
01-basic-game-dev/05-2-texture-loading/: CMakeLists.txt  engine.cxx  game.cxx  picopng.hxx  vert_and_tex_coord.txt
01-basic-game-dev/05-3-graphics-update/: CMakeLists.txt  engine.cxx  engine.hxx  game.cxx  vert_pos.txt  (+1 more)
02-opengl/: CMakeLists.txt  readme.md
02-vulkan/: CMakeLists.txt
05-game/: CMakeLists.txt
class-01-basic-game-dev/: CMakeLists.txt  readme.md
engine/: CMakeLists.txt
game/: CMakeLists.txt  game.cxx
(+1638 files in other folders)
