cmake_minimum_required(VERSION 3.16)

#add_subdirectory(00-1-prepare-linux-gles30)
#add_subdirectory(00-2-prepare-macos-gles30)
#add_subdirectory(00-3-prepare-mingw-gles30)
#add_subdirectory(00-4-prepare-android-gles30)
#add_subdirectory(00-5-prepare-msvc-gles30)
add_subdirectory(00-6-prepare-all-gles30)
add_subdirectory(01-01-window-with-triangle)
add_subdirectory(01-02-triangle-indexed-buf)
#add_subdirectory(01-create-window-gles30)
add_subdirectory(02-01-shader-uniform)
add_subdirectory(03-01-texture-loading)
add_subdirectory(04-01-transformations)
add_subdirectory(05-01-coordinate-systems)
add_subdirectory(06-01-camera)
add_subdirectory(06-02-camera)
add_subdirectory(07-01-color)
add_subdirectory(08-01-basic-lighting)
add_subdirectory(08-02-basic-lighting-add-specular)
add_subdirectory(09-01-materials)
add_subdirectory(10-01-lighting-maps)
add_subdirectory(11-01-light-casters)
add_subdirectory(11-02-light-casters)
add_subdirectory(11-03-light-casters)
add_subdirectory(12-01-multiple-lights)
add_subdirectory(13-01-add-assimp-lib)
add_subdirectory(14-01-mesh)
add_subdirectory(15-01-model)
add_subdirectory(16-01-z-buffer)
add_subdirectory(17-01-stensil)
add_subdirectory(18-01-blending)
add_subdirectory(18-02-blending)
add_subdirectory(19-01-face-culling)
add_subdirectory(20-01-framebuffer)
add_subdirectory(21-01-cubemap)
add_subdirectory(21-02-cubemap-optimized)
add_subdirectory(21-03-cubemap-reflection)
add_subdirectory(21-04-cubemap-refraction)
#add_subdirectory(22-00-more-buffer-operations)
add_subdirectory(23-01-gl_point_size)
add_subdirectory(23-02-gl_frag_coord)
add_subdirectory(23-03-uniform-buffers)
add_subdirectory(24-01-geometry-shader-house)
add_subdirectory(24-02-geo-explode)
add_subdirectory(24-03-normals)
